<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mvp.character_list_mvp.CharacterListView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/titlebar"
        app:layout_constraintTop_toTopOf="parent"
        layout="@layout/component_titlebar"/>

    <RadioGroup
        android:id="@+id/radio_group"
        app:layout_constraintTop_toBottomOf="@+id/titlebar"
        android:background="@color/yellow_beer"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/id_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/for_id_et"
            android:layout_marginStart="@dimen/margin_5dp"
            android:hint="@string/insert_name"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/search_all_rb"
            android:layout_marginStart="@dimen/margin_40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/search_all_tv"
            android:paddingTop="@dimen/padding_16dp"
            android:paddingLeft="@dimen/padding_10dp"
            android:paddingRight="@dimen/padding_10dp"
            android:paddingBottom="@dimen/padding_16dp"
            android:layout_marginStart="@dimen/margin_5dp"
            android:text="@string/search_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:divider="@android:color/transparent"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp">
    </androidx.recyclerview.widget.RecyclerView>

    <com.stefano.starwars.ui.LoadingView
        android:id="@+id/loading_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>